<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/cat_user"
        android:title="@string/cat_user">

        <Preference
            android:key="@string/pref_log_out"
            android:title="@string/pref_log_out" />

        <Preference
            android:key="@string/pref_reset_passwd"
            android:title="@string/pref_reset_passwd" />

        <Preference
            android:key="@string/pref_verification_status_unavailable"
            android:title="@string/pref_verification_status_unavailable" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/cat_request"
        android:title="@string/cat_request">

        <Preference
            android:key="@string/pref_cancel_request"
            android:title="@string/pref_cancel_request" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/cat_others"
        android:title="@string/cat_others">

        <PreferenceScreen
            android:key="@string/pref_screen_announcements"
            android:title="@string/pref_screen_announcements">

            <Preference
                android:key="announce1"
                android:title="Announcement1"/>

            <Preference
                android:key="announce2"
                android:title="Announcement2"/>

        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>