<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/verification_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_avatar"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWarning"
        android:textSize="24sp"
        android:text="@string/email_not_verified"/>

    <Button
        android:id="@+id/btn_reset_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn_resend_email"
        android:text="@string/reset_passwd_button"
        android:visibility="visible"/>

    <Button
        android:id="@+id/btn_resend_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btn_logout"
        android:text="@string/resend_email_button"
        android:visibility="visible"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/logout_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"/>



</RelativeLayout>